# vigia-cesba

./: .env.cesba.example  .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-images.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/vigia_api/: main.py
apps/api/src/vigia_api/core/: db.py  scope.py  security.py  settings.py
apps/api/src/vigia_api/routers/: account.py  alerts.py  auth.py  avisos.py  health.py  invitations.py  normas.py  search.py  stats.py  workspaces.py
apps/api/src/vigia_api/services/: audit.py  emails.py
apps/web/: Dockerfile  auth.js  next.config.mjs  package.json  proxy.js  vercel.json
apps/web/app/: globals.css  layout.jsx  opengraph-image.jsx  page.jsx
apps/web/components/: AuthButton.jsx  CountUp.jsx  FadeIn.jsx  Header.jsx  OnboardingBanner.jsx  Providers.jsx  Sidebar.jsx  TrialGate.jsx  TypingDemo.jsx
apps/workers/: Dockerfile  pyproject.toml
apps/workers/src/vigia_workers/: __init__.py  ai_resumen.py  alerts.py  bicameral.py  celery_app.py  freshness.py  maintenance.py  movimientos.py  notifications.py  persistence.py  reconcile.py  societario.py  tasks.py
apps/workers/tests/: test_mappers.py  test_notifications.py  test_relevancia.py
db/: alembic.ini
db/alembic/: env.py
infra/: DEPLOY-CESBA.md  DEPLOY.md  backup-db.sh  ec2-user-data.sh
infra/caddy/: Caddyfile
scripts/: test_bicameral_dev.py  test_email_dev.py  test_movimientos_dev.py  test_reconcile_dev.py  test_societario_dev.py
src/: App.jsx  index.css
src/components/: Header.jsx  Sidebar.jsx
src/data/: mockData.js
src/views/: AlertsView.jsx  DNUTrackerView.jsx  DashboardView.jsx  FeedView.jsx  NormDetailView.jsx  SearchView.jsx
(+26 files in other folders)
