[project]
name = "vigia-workers"
version = "0.1.0"
description = "Vigía ingestion workers (Celery + beat)"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "anthropic[bedrock]>=0.40",
    "vigia-connectors",
    "vigia-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigia_workers"]
